@@ -266,7 +266,7 @@ class TestTableLifecycle:
 
         await table.create_index(
             "tfi_idx_p_text",
-            column="p_text",
+            "p_text",
             options=TableIndexOptions(
                 ascii=False,
                 normalize=True,
@@ -275,18 +275,18 @@ class TestTableLifecycle:
         )
         await table.create_index(
             "tfi_idx_p_int",
-            column="p_int",
+            "p_int",
         )
         await table.create_vector_index(
             "tfi_idx_p_vector_sm",
-            column="p_vector_sm",
+            "p_vector_sm",
             options=TableVectorIndexOptions(
                 metric="cosine",
             ),
         )
         await table.create_vector_index(
             "tfi_idx_p_vector",
-            column="p_vector",
+            "p_vector",
             options=TableVectorIndexOptions(
                 source_model="openai-v3-large",
             ),
